Migrate to WPILib 2027 and Systemcore
Catalyst v1.12.0 targeted WPILib 2026 and the roboRIO. 2027 is not a version
bump: the package root moved from edu.wpi.first to org.wpilib, the hardware
classes were reorganised, commands v2 was replaced by a coroutine framework on
JDK continuations, and the control system now has five CAN buses instead of one.
Nothing compiled. This gets the library green - 1322 errors to 0, 414 tests
passing - against WPILib 2027 alpha-6 and Systemcore OS beta 13.

Catalyst's public API is intentionally unchanged. Teams should not have to
relearn the library because WPILib reorganised itself, so 2027 is absorbed
behind Catalyst's own surface wherever that was possible.

New, to keep that promise:

  command/CatalystCommand   fluent decorators v3 dropped (withName, finallyDo,
                            beforeStarting) on top of a v3 Command
  command/Commands          the v2 factory names rebuilt on coroutines, so call
                            sites changed their import and nothing else
  command/CatalystSubsystem replaces SubsystemBase; restores run(Runnable) and
                            registers periodic(), which v3 no longer does
                            automatically
  command/LegacyCommands    runs a commands v2 command on the v3 scheduler.
                            PathPlanner alpha-3 is still built against v2, and
                            without this the whole autonomous stack was lost
  sysid/SysIdRoutine        WPILib kept SysIdRoutineLog and deleted the half
                            that drives the mechanism. This restores it on
                            coroutines; the SysId desktop tool sees identical data
  hardware/CatalystCANBus   one bus type over Systemcore, Motioncore and
                            CANivores, holding both the Phoenix and WPILib
                            handles. Encodes that the five buses share SPI
                            controllers in pairs - read out of the OS image
  logging/W